# my_player

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  config.txt  ffplayer.c  install.bat  main.cpp  main1.cpp  main2.cpp  main3.c  main4.c  main4.cpp  main5.cpp  main7.cpp  myprocess.cpp  run.bat  tutorial03.c
include/: audio.h  connect.h  control.h  decoder.h  frame.h  mainwindow.h  my_portocol.h  packetQueue.h  player.h  renderer.h  transport_session.h  video.h  win_net.h
include/UI/: Filesystem.h  file.h  fileiconmapper.h  mainwindow.h  permissionwindow.h  resources.qrc  settingswindow.h  userwindow.h
libs_win/: run.bat
libs_win/CMake_64/doc/cmake/html/: genindex.html  index.html
libs_win/CMake_64/doc/cmake/html/_static/: documentation_options.js
libs_win/CMake_64/doc/cmake/html/command/: add_compile_options.html  add_definitions.html  add_executable.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_minimum_required.html  cmake_path.html  cmake_policy.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_sleep.html  ctest_update.html  ctest_upload.html  elseif.html  enable_testing.html  endfunction.html  endif.html  endmacro.html  endwhile.html  exec_program.html  file.html  find_library.html  find_package.html  find_path.html  fltk_wrap_ui.html  function.html  get_directory_property.html  get_filename_component.html  get_source_file_property.html  get_test_property.html  if.html  include_directories.html  install_programs.html  (+24 more)
libs_win/CMake_64/doc/cmake/html/cpack_gen/: bundle.html  cygwin.html  external.html  freebsd.html  ifw.html  nuget.html  rpm.html  wix.html
libs_win/CMake_64/doc/cmake/html/envvar/: ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CMAKE_APPLE_SILICON_PROCESSOR.html  CMAKE_BUILD_TYPE.html  CMAKE_CONFIGURATION_TYPES.html  CMAKE_CONFIG_TYPE.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_INSTALL_MODE.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_OSX_ARCHITECTURES.html  CMAKE_PREFIX_PATH.html  CMAKE_TOOLCHAIN_FILE.html  CSFLAGS.html  CUDAARCHS.html  CUDACXX.html  CUDAFLAGS.html  CUDAHOSTCXX.html  CXX.html  DASHBOARD_TEST_FROM_CTEST.html  DESTDIR.html  FFLAGS.html  HIPCXX.html  HIPFLAGS.html  ISPCFLAGS.html  LDFLAGS.html  MACOSX_DEPLOYMENT_TARGET.html  OBJC.html  OBJCXX.html  RCFLAGS.html  SWIFTC.html  VERBOSE.html
libs_win/CMake_64/doc/cmake/html/generator/: CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  MinGW Makefiles.html  NMake Makefiles JOM.html  NMake Makefiles.html  Ninja.html  Unix Makefiles.html  Visual Studio 14 2015.html  Visual Studio 15 2017.html  Visual Studio 17 2022.html  Visual Studio 7 .NET 2003.html  Visual Studio 8 2005.html  Watcom WMake.html  Xcode.html
libs_win/CMake_64/doc/cmake/html/manual/: ccmake.1.html  cmake-commands.7.html  cmake-compile-features.7.html  cmake-generators.7.html  cmake-gui.1.html  cmake-language.7.html  cmake-modules.7.html  cmake-policies.7.html  cmake-presets.7.html  cmake-qt.7.html  cmake.1.html  cpack.1.html  ctest.1.html
libs_win/CMake_64/doc/cmake/html/module/: BundleUtilities.html  CMakeDependentOption.html  CMakeDetermineVSServicePack.html  CMakeFindDependencyMacro.html  CMakeFindFrameworks.html  CMakeForceCompiler.html  CMakePackageConfigHelpers.html  CMakeVerifyManifest.html  CPackArchive.html  CPackCygwin.html  CPackDMG.html  CPackDeb.html  CPackFreeBSD.html  CPackIFW.html  CPackIFWConfigureFile.html  CPackRPM.html  CTestCoverageCollectGCOV.html  CTestScriptMode.html  CheckCCompilerFlag.html  CheckCSourceRuns.html  CheckFortranFunctionExists.html  CheckFortranSourceCompiles.html  CheckFortranSourceRuns.html  CheckFunctionExists.html  CheckIncludeFileCXX.html  CheckLibraryExists.html  CheckOBJCSourceRuns.html  Dart.html  (+108 more)
libs_win/CMake_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  ctest.1
libs_win/CMake_64/man/man7/: cmake-commands.7  cmake-env-variables.7  cmake-modules.7  cmake-policies.7  cmake-qt.7  cmake-variables.7  cpack-generators.7
libs_win/develop/ffmpeg-20181212/include/libavutil/: ffversion.h
libs_win/develop/ffmpeg-20181212/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-58.def  avutil.lib  swresample.lib  swscale.lib
libs_win/develop/ffmpeg-n5.1-latest-win64-gpl-shared-5.1/lib/: postproc.lib
libs_win/mingw/: build-info.txt
libs_win/mingw/opt/include/python3.9/: pyconfig.h
libs_win/mingw/opt/lib/: tclConfig.sh  tkConfig.sh
libs_win/mingw/opt/lib/itcl4.2.1/: itclConfig.sh
libs_win/mingw/opt/lib/python3.9/: _sysconfigdata__win32_.py
libs_win/mingw/opt/lib/tdbc1.1.2/: tdbcConfig.sh
libs_win/mingw/x86_64-w64-mingw32/include/: pthread.h  winsock2.h
libs_win/mingw/x86_64-w64-mingw32/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xe  i386pe.xn  i386pe.xr  i386pe.xu  i386pep.x  i386pep.xa  i386pep.xbn  i386pep.xe  i386pep.xn  i386pep.xr  i386pep.xu
libs_win/npm/: webtorrent  webtorrent.cmd  webtorrent.ps1
python_server/: app.py  package-lock.json  script.js  stdout.txt
python_server/static/: style.css
python_server/templates/: file_view.html  folder_view.html  image_viewer.html  index.html  shell.html  text_viewer.html  torrent_video.html  video_player.html
src/: audio.cpp  audio1.cpp  client.cpp  clientprocess.cpp  control.cpp  decoder.cpp  frame.cpp  main.cpp  mainwindow.cpp  packetQueue.cpp  player.cpp  renderer.cpp  server.cpp  serverprocess.cpp  video.cpp  win_net.cpp
src/connect/: client.cpp  connect.cpp  server.cpp  transport_session.cpp  win_net.cpp
src/filesystem/: Filesystem.cpp  Filesystem.ui  file.cpp  fileiconmapper.cpp
src/homepage/: mainwindow.cpp  mainwindow.ui  permissionwindow.cpp  permissionwindow.ui  settingswindow.cpp  settingswindow.ui  userwindow.cpp  userwindow.ui
src/player/: audio.cpp  control.cpp  decoder.cpp  frame.cpp  packetQueue.cpp  player.cpp  renderer.cpp  video.cpp
src/portocol/: my_portocol.cpp
(+972 files in other folders)
